package(default_visibility = ["//visibility:public"])

load("@rules_cc//cc:defs.bzl", "cc_library")
load("@rules_cc//cc:defs.bzl", "cc_binary")

COPTS = ["-std=c++20"]

cc_library(
  name = "task",
  srcs = ["task.cc"],
  hdrs = [
    "executor.h",
    "task.h",
  ],
  deps = [
    "@com_google_glog//:glog",
    ":worker",
  ],
  copts = COPTS,
  linkopts = ["-lpthread"],
)

cc_library(
  name = "worker",
  srcs = ["worker.cc"],
  hdrs = [
    "executor.h",
    "task.h",
    "worker.h",
  ],
  deps = [
    "@com_google_glog//:glog",
  ],
  copts = COPTS,
  linkopts = ["-lpthread"],
)

cc_library(
  name = "executor",
  srcs = ["executor.cc"],
  hdrs = ["executor.h"],
  deps = [
    "@com_google_glog//:glog",
    ":task",
    ":worker",
  ],
  copts = COPTS,
  linkopts = ["-lpthread"],
)

cc_library(
  name = "fifo_executor",
  srcs = ["fifo_executor.cc"],
  hdrs = ["fifo_executor.h"],
  deps = [
    "@com_google_glog//:glog",
    ":task",
    ":worker",
    ":executor",
  ],
  copts = COPTS,
)

cc_library(
  name = "threadpool",
  srcs = ["threadpool.cc"],
  hdrs = ["threadpool.h"],
  deps = [
    "@com_google_glog//:glog",
    ":executor",
    ":fifo_executor",
  ],
  copts = COPTS,
)

cc_test(
  name = "fifo_executor_test",
  srcs = ["fifo_executor_test.cc"],
  deps = [
    ":threadpool",
    "@gtest//:gtest",
    "@gtest//:gtest_main",
    "@com_google_glog//:glog",
  ],
  copts = COPTS,
  size = "small",
)

cc_binary(
  name = "threadpool_benchmark",
  srcs = ["threadpool_benchmark.cc"],
  deps = [
    ":threadpool",
    "@benchmark//:benchmark",
  ],
  copts = COPTS,
)
