package(default_visibility = ["//visibility:public"])

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
load("@rules_cc//cc:defs.bzl", "cc_library")
load("@rules_cc//cc:defs.bzl", "cc_binary")
load("@rules_foreign_cc//foreign_cc:defs.bzl", "configure_make", "cmake")

COPTS = ["-std=c++20", "-D_GNU_SOURCE"]

configure_make(
    name = "librseq",
    configure_in_place = True,
    lib_source = "@librseq_repo//:all_srcs",
    autogen = True,
    autogen_command="./bootstrap",
    out_static_libs = ["librseq.a"],
)

cc_library(
  name = "epoch",
  srcs = ["epoch.cc"],
  hdrs = [
    "epoch.h",
  ],
  deps = [
    "@com_google_glog//:glog",
    "@HyperSharedPointer//:hyper_shared_pointer",
    ":librseq",
  ],
  linkopts = ["-latomic"],
)

cc_test(
  name = "epoch_test",
  srcs = ["epoch_test.cc"],
  deps = [
    ":epoch",
    "@gtest//:gtest",
    "@gtest//:gtest_main",
    "@com_google_glog//:glog",
  ],
  copts = COPTS,
  size = "small",
)

cc_library(
  name = "queue",
  srcs = ["queue.cc"],
  hdrs = [
    "queue.h",
  ],
  deps = [
    "@com_google_glog//:glog",
    ":epoch",
  ],
  copts = COPTS,
)

cc_test(
  name = "queue_test",
  srcs = ["queue_test.cc"],
  deps = [
    ":epoch",
    ":queue",
    "@gtest//:gtest",
    "@gtest//:gtest_main",
    "@com_google_glog//:glog",
  ],
  copts = COPTS,
  size = "small",
)

cc_library(
  name = "task",
  srcs = ["task.cc"],
  hdrs = [
    "executor.h",
    "semaphore.h",
    "task.h",
  ],
  deps = [
    "@com_google_glog//:glog",
    ":epoch",
    ":queue",
    ":semaphore",
    ":worker",
  ],
  copts = COPTS,
  linkopts = ["-lpthread"],
)

cc_library(
  name = "worker",
  srcs = ["worker.cc"],
  hdrs = [
    "executor.h",
    "semaphore.h",
    "task.h",
    "worker.h",
  ],
  deps = [
    ":epoch",
    ":queue",
    "@com_google_glog//:glog",
  ],
  copts = COPTS,
  linkopts = ["-lpthread"],
)

cc_library(
  name = "executor",
  srcs = ["executor.cc"],
  hdrs = ["executor.h"],
  deps = [
    "@com_google_glog//:glog",
    ":epoch",
    ":task",
    ":worker",
  ],
  copts = COPTS,
  linkopts = ["-lpthread"],
)

cc_library(
  name = "fifo_executor",
  srcs = ["fifo_executor.cc"],
  hdrs = ["fifo_executor.h"],
  deps = [
    "@com_google_glog//:glog",
    ":epoch",
    ":task",
    ":worker",
    ":executor",
  ],
  copts = COPTS,
)

cc_library(
  name = "threadpool",
  srcs = ["threadpool.cc"],
  hdrs = ["threadpool.h"],
  deps = [
    "@com_google_glog//:glog",
    ":executor",
    ":fifo_executor",
  ],
  copts = COPTS,
)

cc_test(
  name = "fifo_executor_test",
  srcs = ["fifo_executor_test.cc"],
  deps = [
    ":threadpool",
    "@gtest//:gtest",
    "@gtest//:gtest_main",
    "@com_google_glog//:glog",
  ],
  copts = COPTS,
  size = "small",
)

cc_library(
  name = "semaphore",
  srcs = ["semaphore.cc"],
  hdrs = ["semaphore.h"],
  copts = COPTS,
)

cc_test(
  name = "semaphore_test",
  srcs = ["semaphore_test.cc"],
  deps = [
    ":semaphore",
    "@gtest//:gtest",
    "@gtest//:gtest_main",
    "@com_google_glog//:glog",
  ],
  copts = COPTS,
  size = "small",
)

cc_binary(
  name = "threadpool_benchmark",
  srcs = ["threadpool_benchmark.cc"],
  deps = [
    ":threadpool",
    "@benchmark//:benchmark",
  ],
  copts = COPTS,
)
